# roc-java

./: .gitignore  .travis.yml  AUTHORS.md  HACKING.md  LICENSE  README.md  Roc.java  build.gradle  common.gradle  eclipse-format-prefs.xml  gradle.properties  settings.gradle
.github/workflows/: build.yaml  build.yml  release.yml
android/: build.gradle  settings.gradle
android/app/: AndroidManifest.xml  CMakeLists.txt  build.gradle
android/roc-android/: AndroidManifest.xml  CMakeLists.txt  build.gradle
android/roc-android/src/androidTest/: AndroidManifest.xml
cmake-library/: build.gradle  gradlew  gradlew.bat  settings.gradle
commons/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
native/src/main/cpp/: address.cpp  channel_set.cpp  context.cpp  family.cpp  fec_code.cpp  frame_encoding.cpp  log_level.cpp  logger.cpp  packet_encoding.cpp  port_type.cpp  protocol.cpp  receiver.cpp  resampler_profile.cpp  sender.cpp
native/src/main/headers/: address.h  channel_set.h  common.h  context.h  fec_code.h  frame_encoding.h  packet_encoding.h  resampler_profile.h
native/src/main/public/: com_github_rocproject_roc_Address.h  com_github_rocproject_roc_Family.h  com_github_rocproject_roc_FrameEncoding.h  com_github_rocproject_roc_LogLevel.h  com_github_rocproject_roc_ResamplerProfile.h  com_rocproject_roc_address_Address.h  com_rocproject_roc_address_Family.h  com_rocproject_roc_config_ChannelSet.h  com_rocproject_roc_config_FecCode.h  com_rocproject_roc_config_FrameEncoding.h  com_rocproject_roc_config_PacketEncoding.h  com_rocproject_roc_config_PortType.h  com_rocproject_roc_config_Protocol.h  com_rocproject_roc_config_ResamplerProfile.h  com_rocproject_roc_context_Context.h  com_rocproject_roc_log_LogLevel.h  com_rocproject_roc_log_Logger.h  com_rocproject_roc_receiver_Receiver.h  com_rocproject_roc_sender_Sender.h
roc_jni/: .clang-format  .gitignore  CMakeLists.txt  build.gradle
roc_jni/src/main/cpp/: address.cpp  channel_set.cpp  clock_source.cpp  common.cpp  context.cpp  endpoint.cpp  family.cpp  fec_code.cpp  fec_encoding.cpp  frame_encoding.cpp  log_level.cpp  logger.cpp  packet_encoding.cpp  port_type.cpp  protocol.cpp  receiver.cpp  resampler_backend.cpp  resampler_profile.cpp  sender.cpp
roc_jni/src/main/export/: org_rocstreaming_roctoolkit_Context.h  org_rocstreaming_roctoolkit_Endpoint.h  org_rocstreaming_roctoolkit_Logger.h  org_rocstreaming_roctoolkit_Receiver.h  org_rocstreaming_roctoolkit_RocContext.h  org_rocstreaming_roctoolkit_RocLogger.h  org_rocstreaming_roctoolkit_RocReceiver.h  org_rocstreaming_roctoolkit_RocSender.h
roc_jni/src/main/headers/: channel_set.h  clock_source.h  common.h  endpoint.h  fec_code.h  fec_encoding.h  frame_encoding.h  packet_encoding.h  protocol.h  resampler_backend.h  resampler_profile.h
roc_jni/src/main/impl/: channel_layout.c  channel_layout.h  channel_set.c  channel_set.h  clock_source.c  clock_source.h  clock_sync_backend.c  clock_sync_backend.h  clock_sync_profile.c  clock_sync_profile.h  common.c  common.h  context.c  context_config.c  context_config.h  duration.c  duration.h  endpoint.c  endpoint.h  exceptions.h  fec_encoding.c  fec_encoding.h  format.c  format.h  frame_encoding.c  helpers.c  helpers.h  interface_config.c  interface_config.h  logger.c  media_encoding.c  media_encoding.h  package.h  packet_encoding.c  packet_encoding.h  platform.h  protocol.c  protocol.h  receiver.c  receiver_config.c  (+8 more)
roc_jni/src/main/public/: com_github_rocproject_roc_ChannelSet.h  com_github_rocproject_roc_Context.h  com_github_rocproject_roc_FecCode.h  com_github_rocproject_roc_Logger.h  com_github_rocproject_roc_PacketEncoding.h  com_github_rocproject_roc_PortType.h  com_github_rocproject_roc_Protocol.h  com_github_rocproject_roc_Receiver.h  com_github_rocproject_roc_Sender.h  org_rocstreaming_roctoolkit_Address.h  org_rocstreaming_roctoolkit_ChannelSet.h  org_rocstreaming_roctoolkit_Context.h  org_rocstreaming_roctoolkit_Endpoint.h  org_rocstreaming_roctoolkit_Family.h  org_rocstreaming_roctoolkit_FecCode.h  org_rocstreaming_roctoolkit_FrameEncoding.h  org_rocstreaming_roctoolkit_LogLevel.h  org_rocstreaming_roctoolkit_PacketEncoding.h  org_rocstreaming_roctoolkit_PortType.h  org_rocstreaming_roctoolkit_Protocol.h  org_rocstreaming_roctoolkit_Receiver.h  org_rocstreaming_roctoolkit_ResamplerProfile.h  org_rocstreaming_roctoolkit_Sender.h
scripts/: android_device.sh  android_docker.sh  roc_revision.py
scripts/android/: build_bindings.sh  build_roc.sh  install_dependencies.sh  publish.sh  run_instrumented_tests.sh  start_emulator.sh
scripts/linux/: build_roc.sh  install_dependencies.sh
scripts/osx/: build_bindings.sh  build_roc.sh  install_dependencies.sh
scripts/travis/android/: Dockerfile  before_install.sh  env.sh  install.sh  publish.sh  script.sh
scripts/travis/android/entrypoint/: install.sh  publish.sh  script.sh
scripts/travis/linux/: before_install.sh  install.sh  script.sh
scripts/travis/osx/: before_install.sh  install.sh  script.sh
src/main/java/com/rocproject/roc/: NativeObject.java
src/main/java/org/rocstreaming/roctoolkit/: Address.java  AutoCloseThread.java  ChannelLayout.java  ChannelSet.java  Check.java  ClockSource.java  ClockSyncBackend.java  ClockSyncProfile.java  Context.java  ContextConfig.java  Destructor.java  Endpoint.java  Family.java  FecCode.java  FecEncoding.java  Format.java  FrameEncoding.java  Interface.java  InterfaceConfig.java  InterfaceConfigValidator.java  LogHandler.java  LogLevel.java  Logger.java  MediaEncoding.java  MediaEncodingValidator.java  NativeObject.java  NativeObjectCleaner.java  NativeObjectPhantomReference.java  NativeObjectReference.java  PacketEncoding.java  PortType.java  Protocol.java  ProtocolUtils.java  Receiver.java  ReceiverConfig.java  ReferenceCollector.java  ResamplerBackend.java  ResamplerProfile.java  RocContext.java  RocContextConfig.java  (+15 more)
src/test/java/org/rocstreaming/roctoolkit/: AddressTest.java  BaseTest.java  ContextTest.java  EndpointTest.java  LoggerTest.java  MediaEncodingTest.java  (+12 more)
src/test/resources/: logging.properties
(+57 files in other folders)
